<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.flowgenerator</groupId>
	<artifactId>flowgenerator</artifactId>
	<version>0.0.1</version>
	<name>flowgenerator</name>
	<description>Visualization tool to support the structural testing for
		Java classes by mapping the source code into a well-known graphic
		representation (Control Flow Graph).</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.flowgenerator.gui.FlowGenerator</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
		
		<resources>
      		<resource>
        		<directory>src/main/resources</directory>
               		<includes>
          				<include>**/*.properties</include>
          				<include>**/*.ico</include>
        			</includes>
      		</resource>
      		<resource>
        		<directory>src/main/resources/icones</directory>
               		<includes>
          				<include>**/*.png</include>
          				<include>**/*.gif</include>
          				<include>**/*.jpeg</include>
        			</includes>
      		</resource>
    	</resources>
		
	</build>

</project>